k8s/base/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
